--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,7 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+/.idea/modules.xml
+/.idea/inspectionProfiles/Project_Default.xml
+/.idea/quicklaunchsol-frontend.iml
+/.idea/vcs.xml
